traces/bug_846.txt
src/fflib/problem.cpp:2578: error: DEAD_STORE
  The value written to &pa (type std::complex<double>*) is never used.
Showing all 1 steps of the trace


src/fflib/problem.cpp:2578:9: Write of unused value
2576.       for (npi=0;npi<FIb.n;npi++) // loop on the integration point
2577.         {
2578.           pa =a;
                ^
2579.           QuadratureFormular1dPoint pi( FIb[npi]);
2580.           R2 E=T.Edge(ie);
